--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -8,10 +8,48 @@
     content="width=device-width, initial-scale=1.0"
   >
   <title>Anchors</title>
+
+  <link
+    rel="stylesheet"
+    href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
+  >
 </head>
 
 <body>
+  <a
+    href="https://google.com"
+    title="Click aici pentru a naviga spre Google"
+  >Google</a>
+  <br>
+  <a
+    href="https://https://login.yahoo.com/"
+    title="Apasa pentru Yahoo!"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Yahoo</a>
+  <br>
+  <a
+    href="https://bing.com"
+    title="Navigheaza spre Bing"
+  >Bing</a>
+  <br><a
+    href="https://facebook.com"
+    title="Click aici pentru Facebook"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Facebook</a>
 
+  <br><a
+    href="https://twitter.com"
+    title="Click pentru Twitter"
+  >Twitter</a>
+  <br>
+  <a
+    href="https://pixellab.ro"
+    title="Aici invatam HTML"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Pixellab</a>
   <div
     class="pixeltab-host"
     id="html01-01-03"
