--- a/Curs01/Ex07/index.html
+++ b/Curs01/Ex07/index.html
@@ -16,6 +16,78 @@
 </head>
 
 <body>
+  <h1>The Internet
+  </h1>
+  <h2>Google</h2>
+  <h3>Details</h3>
+  <p>
+    Google LLC is an American multinational technology
+    company that specializes in Internet-related services and
+    products, which include online advertising technologies,
+    search engine, cloud computing, software, and hardware. It
+    is considered one of the Big Four technology companies, alongside
+    Amazon, Apple and Facebook.
+  </p>
+  <h3>Links</h3>
+  <p>
+    <a
+      href="https://en.wikipedia.org/wiki/Google"
+      title="Google"
+      target="_blank"
+      rel="noopener noreferrer"
+    >https://en.wikipedia.org/wiki/Google</a><br>
+    <a
+      href="https://www.google.com"
+      title="Google"
+      target="_blank"
+      rel="noopener noreferrer"
+    >https://www.google.com</a>
+  </p>
+  <h2>Twitter</h2>
+  <h3>Details</h3>
+  <p>
+    Twitter is a microblogging and social networking service on which users post and interact with messages known as
+    "tweets". Tweets were originally restricted to 140 characters, but on November 7, 2017, this limit was doubled to
+    280 for all languages except Chinese, Japanese, and Korean. Registered users
+    can post, like, and retweet tweets, but
+    unregistered users can only read them. Users access Twitter through its
+    website interface, through Short Message
+    Service (SMS) or its mobile-device application software ("app"). Twitter, Inc. is based in San Francisco,
+    California, and has more than 25 offices around the world.
+  </p>
+  <h3>Links</h3>
+  <p>
+    <a
+      href="https://en.wikipedia.org/wiki/Twitter"
+      title="Twitter"
+      target="_blank"
+      rel="noopener noreferrer"
+    >https://en.wikipedia.org/wiki/Twitter</a>
+    <a
+      href="https://twitter.com "
+      title="Twitter"
+      target="_blank"
+      rel="noopener noreferrer"
+    >https://twitter.com </a>
+  </p>
+  <h2>Facebook</h2>
+  <h3>Details</h3>
+  <p>Facebook, Inc. is an American online social media and social networking service company based in Menlo Park,
+    California. It was founded by Mark Zuckerberg, along with fellow Harvard C
+    ollege students and roommates Eduardo
+    Saverin, Andrew McCollum, Dustin Moskovitz and Chris Hughes.
+    It is considered one of the Big Four technology
+    companies along with Amazon, Apple, and Google.
+  </p>
+  <h3>Links</h3>
+  <p>
+    <a
+      href="http://"
+      target="_blank"
+      rel="noopener noreferrer"
+    ></a>
+  </p>
+
 
 
   <div
