--- a/Curs02/Ex01/index.html
+++ b/Curs02/Ex01/index.html
@@ -16,10 +16,30 @@
 </head>
 
 <body>
+  <img
+    src="https://via.placeholder.com/150x20/40"
+    alt="imaginea mea "
+  >
+  <img
+    src="https://via.placeholder.com/43x144/40"
+    alt="imaginea mea"
+  >
+  <img
+    src="https://via.placeholder.com/45x34/40"
+    alt="iamginea mea "
+  >
 
-
+  <img
+    src="https://via.placeholder.com/200x200/33"
+    alt="imaginea mea"
+  >
+  <img
+    src="https://via.placeholder.com/450x200/25"
+    alt="imaginea mea"
+  >
   <div
-    class="pixeltab-host"
+    class="
+    pixeltab-host"
     id="html01-02-01"
   ></div>
   <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
