--- a/Curs01/Ex05/index.html
+++ b/Curs01/Ex05/index.html
@@ -16,7 +16,60 @@
 </head>
 
 <body>
+  <h1>Titlul meu</h1>
+  <h2>Subtitlul meu </h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Sed risus ultricies tristique nulla aliquet. Faucibus a pellentesque sit amet porttitor eget dolor morbi.
+    Gravida cum sociis natoque penatibus et magnis. Donec et odio pellentesque diam volutpat commodo sed. Nisl purus in
+    mollis nunc sed id. Nunc faucibus a pellentesque sit amet porttitor eget. Suspendisse ultrices gravida dictum fusce.
+    A pellentesque sit amet porttitor eget dolor morbi non. Eleifend donec pretium vulputate sapien nec sagittis aliquam
+    malesuada bibendum.
 
+  </p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Sed risus ultricies tristique nulla aliquet. Faucibus a pellentesque sit amet porttitor eget dolor morbi.
+    Gravida cum sociis natoque penatibus et magnis. Donec et odio pellentesque diam volutpat commodo sed. Nisl purus in
+    mollis nunc sed id. Nunc faucibus a pellentesque sit amet porttitor eget. Suspendisse ultrices gravida dictum fusce.
+    A pellentesque sit amet porttitor eget dolor morbi non. Eleifend donec pretium vulputate sapien nec sagittis aliquam
+    malesuada bibendum.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Sed risus ultricies tristique nulla aliquet. Faucibus a pellentesque sit amet porttitor eget dolor morbi.
+    Gravida cum sociis natoque penatibus et magnis. Donec et odio pellentesque diam volutpat commodo sed. Nisl purus in
+    mollis nunc sed id. Nunc faucibus a pellentesque sit amet porttitor eget. Suspendisse ultrices gravida dictum fusce.
+    A pellentesque sit amet porttitor eget dolor morbi non. Eleifend donec pretium vulputate sapien nec sagittis aliquam
+    malesuada bibendum.
+  </p>
+  <p>
+    Linkurile de mai jos vor deschide siteurile respective in taburi noi si vor avea ca titlul textul linkului.
+  </p>
+  <p>
+    <a
+      href="https://google.com"
+      title="Google"
+      target="_blank"
+      rel="noopener noreferrer"
+    >Google</a>
+    <a
+      href="https://twitter.com"
+      title="Twitter"
+      target="_blank"
+      rel="noopener noreferrer"
+    >Twitter</a>
+    <a
+      href="https://facebook.com"
+      title="Facebook"
+      target="_blank"
+      rel="noopener noreferrer"
+    >Facebook</a>
+    <a
+      href="https://bing.com"
+      title="Bing"
+      target="_blank"
+      rel="noopener noreferrer"
+    >Bing</a>
+  </p>
 
   <div
     class="pixeltab-host"
