--- a/Curs01/Ex07/index.html
+++ b/Curs01/Ex07/index.html
@@ -36,7 +36,7 @@
       target="_blank"
       rel="noopener noreferrer"
     >https://en.wikipedia.org/wiki/Google</a><br>
-    <a
+    <br><a
       href="https://www.google.com"
       title="Google"
       target="_blank"
@@ -63,7 +63,7 @@
       target="_blank"
       rel="noopener noreferrer"
     >https://en.wikipedia.org/wiki/Twitter</a>
-    <a
+    <br><a
       href="https://twitter.com "
       title="Twitter"
       target="_blank"
@@ -87,7 +87,7 @@
       rel="noopener noreferrer"
       title="Facebook"
     >https://en.wikipedia.org/wiki/Facebook</a>
-    <a
+    <br><a
       href="https://www.facebook.com"
       target="_blank"
       rel="noopener noreferrer"
@@ -104,18 +104,18 @@
   </p>
   <h3>Links</h3>
   <p><a
-      href="https://en.wikipedia.org/wiki/Bing_(search_engine)
-  "
+      href="https://en.wikipedia.org/wiki/Bing_(search_engine)"
       target="_blank"
       rel="noopener noreferrer"
       title="Bing"
-    >https://en.wikipedia.org/wiki/Bing_(search_engine)
-    </a>
+    >https://en.wikipedia.org/wiki/Bing_(search_engine)</a>
+    <br>
     <a
-      href="http://"
+      href="https://www.bing.com"
       target="_blank"
       rel="noopener noreferrer"
-    ></a>
+      title="Bing"
+    >https://www.bing.com</a>
   </p>
 
 
