--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -45,10 +45,10 @@
   >Twitter</a>
   <br>
   <a
-    href="https://pixellab.ro"
-    title="Aici invatam HTML"
+    href="https://pixellab"
     target="_blank"
     rel="noopener noreferrer"
+    title="Aici invatam HTML"
   >Pixellab</a>
   <div
     class="pixeltab-host"
