--- a/Curs02/Ex02/index.html
+++ b/Curs02/Ex02/index.html
@@ -11,11 +11,27 @@
 </head>
 
 <body>
-  <img src="">
-  <img src="">
-  <img src="">
-  <img src="">
-  <img src="">
+  <img
+    alt="O imagine"
+    src=""
+  >
+
+  <img
+    alt="alta imagine"
+    src=""
+  >
+  <img
+    alt="inca o imagine"
+    src=""
+  >
+  <img
+    alt="imagine"
+    src=""
+  >
+  <img
+    alt="ultima imagine"
+    src=""
+  >
 
   <div
     class="pixeltab-host"
