--- a/Curs02/Ex05/index.html
+++ b/Curs02/Ex05/index.html
@@ -17,7 +17,13 @@
 
 <body>
 
-
+  <ol>
+    <li>JavaScript</li>
+    <li>node.js</li>
+    <li>Bootstrap / Tailwind</li>
+    <li>React</li>
+    <li>HTML/CSS</li>
+  </ol>
   <div
     class="pixeltab-host"
     id="html01-02-05"
