--- a/Curs03/Ex04/index.html
+++ b/Curs03/Ex04/index.html
@@ -18,6 +18,77 @@
 
 <body>
 
+  <form>
+    <h5>Kaufland</h5>
+    <ul>
+      <li>
+        <input
+          type="checkbox"
+          name="paine"
+          id="paine"
+        >
+        <label for="paine">Paine</label>
+      </li>
+      <li>
+        <input
+          type="checkbox"
+          name="lapte"
+          id="lapte"
+        >
+        <label for="lapte">Lapte</label>
+      </li>
+      <li>
+        <input
+          type="checkbox"
+          name="ciocolata"
+          id="ciocolata"
+        >
+        <label for="ciocolata">Ciocolata</label>
+      </li>
+    </ul>
+
+  </form>
+  <Form>
+    <h5>Lidl</h5>
+    <ul>
+      <li>
+        <input
+          type="checkbox"
+          name="paste"
+          id="paste"
+        ><label for="paste">Paste</label>
+      </li>
+    </ul>
+
+  </Form>
+  <form>
+    <h5>Profi </h5>
+    <ul>
+      <li>
+        <input
+          type="checkbox"
+          name="mandarine"
+          id="mandarine"
+        ><label for="mandarine">Mandarine</label>
+      </li>
+      <li>
+        <input
+          type="checkbox"
+          name="bere"
+          id="bere"
+        >
+        <label for="bere">Bere</label>
+      </li>
+      <li>
+        <input
+          type="checkbox"
+          name="chipsuri"
+          id="chipsuri"
+        ><label for="chipsuri">Chipsuri</label>
+      </li>
+    </ul>
+  </form>
+
 
   <div
     class="pixeltab-host"
