--- a/Curs03/Ex05/index.html
+++ b/Curs03/Ex05/index.html
@@ -18,8 +18,28 @@
 
 <body>
   <form>
+    <input
+      type="email"
+      name="email"
+      id="email"
+      placeholder="Email"
+      required
+    ><br>
+    <input
+      type="password"
+      name="password"
+      id="password"
+      placeholder="Parola"
+      required
+    >
+    <input
+      type="checkbox"
+      name="remember-me"
+      id="remember-me"
+    ><label for="remember-me">Remember Me!</label><br>
     <button type="submit">Trimite</button>
   </form>
+
 
   <div
     class="pixeltab-host"
