--- a/Curs03/Ex06/index.html
+++ b/Curs03/Ex06/index.html
@@ -53,6 +53,65 @@
         </li>
       </ul>
     </form>
+    <form>
+      <h3>Pesti</h3>
+      <ul>
+        <li>
+          <input
+            type="radio"
+            name="Pesti"
+            id="somon"
+            value="somon"
+          ><label for="somon">Somon</label>
+        </li>
+        <li>
+          <input
+            type="radio"
+            name="Pesti"
+            id="stiuca"
+            value="stiuca"
+          ><label for="stiuca">Stiuca</label>
+        </li>
+        <li>
+          <input
+            type="radio"
+            name="Pesti"
+            id="cod"
+            value="cod"
+          ><label for="cod">Cod</label>
+        </li>
+      </ul>
+    </form>
+    <form action="">
+      <h5>Mamifere</h5>
+      <ul>
+        <li>
+          <input
+            type="radio"
+            name="Mamifere"
+            id="vaca"
+            value="vaca"
+          ><label for="vaca">Vaca</label>
+
+        </li>
+        <li>
+          <input
+            type="radio"
+            name="Mamifere"
+            id="ornitorinc"
+            value="ornitorinc"
+          ><label for="ornitorinc">Ornitorinc</label>
+        </li>
+        <li>
+          <input
+            type="radio"
+            name="Mamifere"
+            id="elefant"
+            value="elefant"
+          ><label for="elefant">Elefant</label>
+        </li>
+      </ul>
+    </form>
 
     <div
       class="pixeltab-host"
