--- a/Curs02/Ex04/index.html
+++ b/Curs02/Ex04/index.html
@@ -7,7 +7,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Document</title>
+  <title>unorder list </title>
 
   <link
     rel="stylesheet"
@@ -16,6 +16,26 @@
 </head>
 
 <body>
+
+  <ul>
+    <li>HTML</li>
+    <li>css</li>
+    <li>Sass</li>
+    <li>npm</li>
+    <li>Bootstrap</li>
+  </ul>
+  <ul>
+    <li>JavaScript</li>
+    <li>node.js</li>
+    <li>Ajax</li>
+    <li>JQuery</li>
+    <li>DOM Scripting</li>
+    <li>React</li>
+  </ul>
+
+
+
+
   <div
     class="pixeltab-host"
     id="html01-02-04"
