--- a/Curs03/Ex01/index.html
+++ b/Curs03/Ex01/index.html
@@ -28,15 +28,68 @@
       name="surname"
       placeholder="Prenume"
     >
-
+    <input
+      type="text"
+      name="nickname"
+      id="nickname"
+      placeholder="Porecla"
+    >
+    <br>
+    <input
+      type="text"
+      name="car-brand"
+      placeholder="Marca auto"
+      maxlength="10"
+      minlength="4"
+      value="Skoda"
+    >
+    <br>
+    <input
+      type="text"
+      name="pet-name"
+      id="pet-name"
+      placeholder="Nume animal"
+    >
+    <input
+      type="text"
+      name="phone-brand"
+      id="phone-brand"
+      placeholder="Marca telefon"
+      maxlength="30"
+      minlength="2"
+      value="iPhone"
+    >
+    <br>
+    <input
+      type="text"
+      name="phone-number"
+      id="phone-number"
+      placeholder="Numar telefon"
+    >
+    <br>
+    <input
+      type="text"
+      name="friend-name"
+      id="friend-name"
+      placeholder="Nume prieten"
+    >
+    <br>
+    <input
+      type="text"
+      name="friend-surname"
+      id="friend-surname"
+      placeholder="Prenume prieten"
+    >
     <button type="submit">Trimite</button>
-
-    <div
-      class="pixeltab-host"
-      id="html01-03-01"
-    ></div>
-    <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
   </form>
+
+
+  <div
+    class="pixeltab-host"
+    id="html01-03-01"
+  ></div>
+  <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
+
 
 </body>
 
