--- a/Curs03/Ex02/index.html
+++ b/Curs03/Ex02/index.html
@@ -17,6 +17,43 @@
 
 <body>
   <form>
+    <input
+      type="text"
+      name="name"
+      id="name"
+      placeholder="Nume"
+      required
+    >
+    <input
+      type="text"
+      name="surname"
+      id="surnamen"
+      placeholder="Prenume"
+      required
+    > <br>
+    <input
+      type="text"
+      name="username"
+      id="username"
+      placeholder="Nume de utilizator"
+      maxlength="25"
+      minlength="3"
+      required
+    ><br>
+    <input
+      type="email"
+      name="email"
+      id="email"
+      placeholder="email@email.com"
+      required
+    ><br>
+    <input
+      type="tel"
+      name="phone"
+      id="phone"
+      placeholder="Numar de telefon"
+      required
+    >
 
     <button type="submit">Trimite</button>
   </form>
