--- a/Curs02/Ex04/index.html
+++ b/Curs02/Ex04/index.html
@@ -32,8 +32,29 @@
     <li>DOM Scripting</li>
     <li>React</li>
   </ul>
+  <ul>
+    <li>Paine</li>
+    <li>Lapte</li>
+    <li>Oua</li>
+    <li>Faina</li>
+    <li>Finetti</li>
+  </ul>
+  <ul>
+    <li>Ana</li>
+    <li>Ioana</li>
+    <li>Joana</li>
+    <li>Oana</li>
+    <li>Moana</li>
 
+  </ul>
+  <ul>
+    <li>Alex</li>
+    <li>Dragos</li>
+    <li>Iancu</li>
+    <li>David</li>
+    <li>Andrei</li>
 
+  </ul>
 
 
   <div
