--- a/Curs02/Ex05/index.html
+++ b/Curs02/Ex05/index.html
@@ -24,6 +24,22 @@
     <li>React</li>
     <li>HTML/CSS</li>
   </ol>
+  <ol>
+    <li>Travis Fimmel</li>
+    <li>Alexander Ludwig</li>
+    <li>Cillian Murphy</li>
+    <li>Jason Statham</li>
+    <li>Adam Sandler</li>
+
+  </ol>
+  <ol>
+    <li>Hacksaw Ridge</li>
+    <li>The Hobbit</li>
+    <li>The Expendables</li>
+    <li>Angry Birds</li>
+    <li>Max</li>
+
+  </ol>
   <div
     class="pixeltab-host"
     id="html01-02-05"
