--- a/Curs03/Ex04/index.html
+++ b/Curs03/Ex04/index.html
@@ -58,6 +58,20 @@
           id="paste"
         ><label for="paste">Paste</label>
       </li>
+      <li>
+        <input
+          type="checkbox"
+          name="sos-carbonara"
+          id="sos-carbonara"
+        ><label for="sos-carbonara">Sos Carbonara</label>
+      </li>
+      <li>
+        <input
+          type="checkbox"
+          name="sare"
+          id="sare"
+        ><label for="sare">Sare</label>
+      </li>
     </ul>
 
   </Form>
@@ -85,6 +99,13 @@
           name="chipsuri"
           id="chipsuri"
         ><label for="chipsuri">Chipsuri</label>
+      </li>
+      <li>
+        <input
+          type="checkbox"
+          name="branza"
+          id="branza"
+        ><label for="branza">Branza</label>
       </li>
     </ul>
   </form>
