--- a/Curs03/Ex07/index.html
+++ b/Curs03/Ex07/index.html
@@ -28,6 +28,29 @@
       <option value="boston">Boston</option>
     </select>
     <hr>
+    <h3>Canada</h3>
+    <select>
+      <option value="">--selecteaza--</option>
+      <option value="alberta">Alberta</option>
+      <option value="yukon">Yukon</option>
+      <option value="british-columbia">British Columbia</option>
+      <option value="manitoba">Manitoba</option>
+      <option value="saskatchewan">Saskatchewan</option>
+    </select>
+    <hr>
+    <h3>Romania</h3>
+    <select
+      name=""
+      id=""
+    >
+      <option value="">--selecteaza--</option>
+      <option value="moldova">Moldova</option>
+      <option value="muntenia">Muntenia</option>
+      <option value="oltenia">Oltenia</option>
+      <option value="banat">Banat</option>
+      <option value="crisana">Crisana</option>
+
+    </select>
 
   </form>
 
