--- a/Curs03/Ex05/index.html
+++ b/Curs03/Ex05/index.html
@@ -34,6 +34,11 @@
     >
     <input
       type="checkbox"
+      name="remember"
+      id="remember"
+    ><label for="remember">Remember</label>
+    <input
+      type="checkbox"
       name="remember-me"
       id="remember-me"
     ><label for="remember-me">Remember Me!</label><br>
