--- a/Curs03/Ex08/index.html
+++ b/Curs03/Ex08/index.html
@@ -22,8 +22,28 @@
       type="text"
       id="name"
       name="name"
-      value="Dragos"
+      value=""
     >
+    <br>
+    <label for="surname">Prenume</label>
+    <input
+      type="text"
+      id="surname"
+      name="surname"
+      value=""
+    >
+    <br>
+    <button
+      type="submit"
+      name="submit"
+      id="submit"
+    >Trimite</button>
+
+    <button
+      type="reset"
+      name="reset"
+      id="reset"
+    >Reseteaza</button>
   </form>
 
   <div
