--- a/Curs03/Ex09/index.html
+++ b/Curs03/Ex09/index.html
@@ -7,7 +7,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Document</title>
+  <title>Textarea</title>
 
   <link
     rel="stylesheet"
@@ -16,6 +16,59 @@
 </head>
 
 <body>
+  <form>
+    <label for="name">*Nume</label>
+    <input
+      type="text"
+      name="name"
+      id="name"
+      required
+      placeholder="Nume"
+      minlength="5"
+      maxlength="30"
+    ><br>
+    <label for="surname">*Prenume</label>
+    <input
+      type="text"
+      name="surname"
+      id="surname"
+      required
+      placeholder="Prenume"
+      minlength="5"
+      maxlength="30"
+    >
+    <br>
+    <label for="message">*Mesaj</label>
+    <br>
+    <textarea
+      name="message"
+      id="message"
+      cols="30"
+      rows="4"
+      placeholder="Mesaj"
+      required
+    ></textarea>
+    <br>
+    <label for="details">*Detalii</label>
+    <br>
+    <textarea
+      name="details"
+      id="details"
+      cols="30"
+      rows="8"
+      required
+      placeholder="Detalii"
+    ></textarea>
+
+    <button
+      type="submit"
+      name="submit"
+      id="submit"
+    >Trimite</button>
+
+  </form>
+
+
   <div
     class="pixeltab-host"
     id="html01-03-09"
