--- a/Curs03/Ex10/index.html
+++ b/Curs03/Ex10/index.html
@@ -7,7 +7,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Document</title>
+  <title>Fieldste</title>
 
   <link
     rel="stylesheet"
@@ -16,6 +16,50 @@
 </head>
 
 <body>
+  <h1>Tari si diviziunile lor </h1>
+  <form action="">
+    <fieldset>
+      <legend>USA</legend>
+
+      <select
+        name="usa-states"
+        id="usa-states"
+      >
+        <option value="">--selecteaza--</option>
+        <option value="alabama">Alabama</option>
+        <option value="arkansas">Arkansas</option>
+        <option value="boston">Boston</option>
+      </select>
+    </fieldset>
+    <fieldset>
+      <legend>Canada</legend>
+      <select
+        name="canada"
+        id="canada"
+      >
+        <option value="">--selecteaza--</option>
+        <option value="alberta">Alberta</option>
+        <option value="manitopa">Manitopa</option>
+        <option value="yukon">Yukon</option>
+      </select>
+    </fieldset>
+    <fieldset>
+      <legend>Romania</legend>
+      <select
+        name="romania"
+        id="romania"
+      >
+        <option value="">--selecteaza--</option>
+        <option value="moldova">Moldova</option>
+        <option value="muntenia">Muntenia</option>
+        <option value="banat">Banat</option>
+      </select>
+    </fieldset>
+
+  </form>
+
+
+
   <div
     class="pixeltab-host"
     id="html01-03-10"
