--- a/Curs04/Ex01/index.html
+++ b/Curs04/Ex01/index.html
@@ -22,6 +22,26 @@
 </head>
 
 <body>
+  <table>
+    <tr>
+      <th>Nume</th>
+      <th>Exemple</th>
+      <th>Detalii</th>
+    </tr>
+    <tr>
+      <td>Smartphone</td>
+      <td>Huawei</td>
+      <td>6GbRam</td>
+
+    </tr>
+    <tr>
+      <td>Car</td>
+      <td>Dacia</td>
+      <td>Logan</td>
+
+    </tr>
+
+  </table>
 
 
   <div
