--- a/Curs04/Ex02/index.html
+++ b/Curs04/Ex02/index.html
@@ -22,6 +22,29 @@
 </head>
 
 <body>
+  <table>
+    <tr>
+      <th>Urs grisly</th>
+      <th>Urs brun</th>
+      <th>Urs de plus</th>
+
+    </tr>
+    <tr>
+      <th>Urs panda</th>
+      <th>Urs koala</th>
+      <th>Urs polar</th>
+
+    </tr>
+    <tr>
+      <th>Urs de ciocolata</th>
+      <th>Urs de jucarie </th>
+      <th>Urs de plastic</th>
+
+    </tr>
+
+
+
+  </table>
 
 
   <div
