--- a/Curs05/Ex02/index.html
+++ b/Curs05/Ex02/index.html
@@ -16,20 +16,21 @@
 </head>
 
 <body>
-  <b>
-    <div>Facebook este o retea de socializare</div>
-  </b>
+
+  <div> <b>Facebook este o retea de socializare </b> </div>
+
 
   <ul>
-    <p>
-      <li>Elementul listei mele</li>
-    </p>
+    <li>
+      <p>Elementul listei mele</p>
+    </li>
   </ul>
 
-  <a href="http://facebook.com">
-    <nav>Facebook</nav>
-  </a>
-
+  <p>
+    <a href="http://facebook.com">
+      <nav>Facebook</nav>
+    </a>
+  </p>
   <div
     class="pixeltab-host"
     id="html01-05-02"
