--- a/Curs04/Ex04/index.html
+++ b/Curs04/Ex04/index.html
@@ -16,6 +16,152 @@
 </head>
 
 <body>
+  <h1>Welcome to our newsletter</h1>
+  <p>
+    <img
+      src="images/newsletter.jpg"
+      alt="newsletter"
+    >
+  </p>
+  <p>Subscribe,
+    <b>now</b>!
+  </p>
+  <p>
+
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+  <p>
+
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+  <p>
+    <a
+      href=""
+      title="Privacy"
+    >Privacy</a>
+    <a
+      href=""
+      title="GDPR"
+    >GDPR</a>
+    <a
+      href=""
+      title="Customer Service"
+    >Customer Service</a>
+
+    <a
+      href=""
+      title="Contact"
+    >Contact</a>
+
+
+
+  </p>
+  <h2>Newsletter Form</h2>
+  <form action="">
+    <fieldset>
+      <legend>Subscribe:</legend>
+      <label>Title:</label>
+      <label for="male">Mr</label>
+      <input
+        type="radio"
+        name="gender"
+        id="male"
+        value="male"
+        checked
+      >
+      <label for="female">Mrs</label>
+      <input
+        type="radio"
+        name="gender"
+        id="female"
+        value="female"
+      >
+      <label for="na">Unspecified</label>
+      <input
+        type="radio"
+        name="gender"
+        id="na"
+        value="na"
+      ><br>
+      <label for="name">*Name</label>
+      <input
+        type="text"
+        name="name"
+        id="name"
+        required
+        placeholder="Name"
+      >
+      <label for="surname">*Surname</label>
+      <input
+        type="text"
+        name="surname"
+        id="surname"
+        required
+        placeholder="Surname"
+      ><br>
+      <label for="email">*Email</label>
+      <input
+        type="email"
+        name="email"
+        id="email"
+        required
+        placeholder="Email"
+      ><br>
+      <input
+        type="checkbox"
+        name="subscribe"
+        id="subscribe"
+      >
+      <label for="subscribe">Agree to this and <i>we will send you emails</i>.
+      </label><br>
+      <input
+        type="checkbox"
+        name="gdpr-consent"
+        id="gdpr-consent"
+      >
+      <label for="gdpr-consent">GDPR generic consent?</label><br>
+      <button
+        type="submit"
+        name="submit"
+        id="submit"
+        value="submit"
+      >Remember
+      </button>
+    </fieldset>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <p>
+      <a
+        href=""
+        title="Privacy"
+      >Privacy</a>
+      <a
+        href=""
+        title="GDPR"
+      >GDPR</a>
+      <a
+        href=""
+        title="Customer Service"
+      >Customer Service</a>
+
+      <a
+        href=""
+        title="Contact"
+      >Contact</a>
+    </p>
+  </form>
+
+
 
 
   <div
