--- a/Curs04/Ex06/index.html
+++ b/Curs04/Ex06/index.html
@@ -16,6 +16,155 @@
 </head>
 
 <body>
+  <h1>New Address</h1>
+  <p><img
+      src="images/new_address.jpg"
+      alt="new_address"
+    ></p>
+  <p>
+    <b>Please provide a valid address</b>, otherwise we will not be able to send your stuff.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+  <h2>Useful links</h2>
+  <p>
+  <ul>
+    <li><a
+        href="https://www.google.com/maps"
+        target="_blank"
+        rel="noopener noreferrer"
+      >https://www.google.com/maps</a>
+    </li><br>
+    <li>
+      <a
+        href="https://www.coduripostale.com"
+        target="_blank"
+        rel="noopener noreferrer"
+      >https://www.coduripostale.com</a>
+    </li>
+
+  </ul>
+  </p>
+  <h2>Address Form</h2>
+  <form action="">
+    <fieldset>
+      <legend>Address Information:</legend>
+      <label for="">Title:</label>
+      <label for="male">Mr</label>
+      <input
+        type="radio"
+        name="gender"
+        id="male"
+        checked
+      >
+      <label for="female">Mrs</label>
+      <input
+        type="radio"
+        name="gender"
+        id="female"
+      >
+      <label for="na">Unspecified</label>
+      <input
+        type="radio"
+        name="gender"
+        id="na"
+      ><br>
+
+
+      <label for="name">*Name</label>
+      <input
+        type="text"
+        name="name"
+        id="name"
+        placeholder="Name"
+        required
+      >
+      <label for="surname">*Surname</label>
+      <input
+        type="text"
+        name="surname"
+        id="surname"
+        placeholder="Surname"
+        required
+      ><br>
+      <label for="phone">*Phone</label>
+      <input
+        type="tel"
+        name="phone"
+        id="phone"
+        placeholder="Phone"
+        required
+      ><br>
+      <label for="address1">*Address line 1:</label>
+      <input
+        type="text"
+        name="address1"
+        id="address1"
+        placeholder="Address Line 1"
+        required
+      ><br>
+      <label for="address2">*Address line 2:</label>
+      <input
+        type="text"
+        name="address2"
+        id="address2"
+        placeholder="Address Line 2"
+        required
+      ><br>
+      <label for="city">*City</label>
+      <input
+        type="text"
+        name="city"
+        id="city"
+        placeholder="City"
+        required
+      ><br>
+      <label for="state">*State</label>
+      <select
+        name="state"
+        id="state"
+        required
+      >State
+        <option value="">--State--</option>
+        <option value=""></option>
+      </select>
+      <label for="postcode">*Postcode</label>
+      <input
+        type="text"
+        name="postcode"
+        id="postcode"
+        placeholder="Postcode"
+        required
+      ><br>
+      <label for="gdpr-consent">GDPR generic consent</label>
+      <input
+        type="checkbox"
+        name="gdpr-consent"
+        id="gdpr-consent"
+      ><br><br>
+      <button
+        type="submit"
+        name="submit"
+        id="submit"
+      >Create Account</button>
+      <button
+        type="reset"
+        name="reset"
+        id="reset"
+      >Reset</button>
+
+    </fieldset>
+  </form>
 
 
   <div
