--- a/Curs04/Ex07/index.html
+++ b/Curs04/Ex07/index.html
@@ -16,6 +16,336 @@
 </head>
 
 <body>
+  <p>
+    <a
+      href=""
+      title="home"
+    >Home</a>*
+    <a
+      href=""
+      title="place order"
+    ><b>Place Order</b></a>*
+    <a
+      href=""
+      title="customer service"
+    >Customer Service</a>*
+    <a
+      href=""
+      title="contact"
+    >Contact</a>
+
+  </p>
+  <h1>Place Order</h1>
+
+
+  <p>This is the <b> guest checkout </b></p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+  <h2>Products</h2>
+  <p>
+    <img
+      src="images/mouse.jpg"
+      alt="mouse"
+    >
+    <a
+      href=""
+      title="sterge"
+    >Sterge</a>
+    <a
+      href=""
+      title="editeaza"
+    >Editeaza</a>
+  </p>
+  <hr><br>
+  <p>
+    <img
+      src="images/extension_chord.jpg"
+      alt="extension_chord"
+    >
+    <a
+      href=""
+      title="sterge"
+    >Sterge</a>
+    <a
+      href=""
+      title="editeaza"
+    >Editeaza</a>
+  </p>
+  <hr><br>
+  <p>
+    <img
+      src="images/phone.jpg"
+      alt="phone"
+    >
+    <a
+      href=""
+      title="sterge"
+    >Sterge</a>
+    <a
+      href=""
+      title="editeaza"
+    >Editeaza</a>
+  </p>
+  <hr><br>
+  <h2>Order Now</h2>
+  <p>On our website <i> no account is needed</i>.</p>
+  <ol>
+    <li>First we need some info about yourself. <b> Don’t forget to provide a phone</b>.</li>
+    <li>Then we need your <i>real</i> shipping address.</li>
+    <li>Finally, your credit card information.</li>
+
+  </ol>
+  <form action="">
+    <fieldset>
+      <legend>Personal Information</legend>
+      <label for="">Title:</label>
+      <label for="male">Mr</label>
+      <input
+        type="radio"
+        name="gender"
+        id="male"
+        checked
+      >
+      <label for="female">Mrs</label>
+      <input
+        type="radio"
+        name="gender"
+        id="female"
+      >
+      <label for="na">Unspecified</label>
+      <input
+        type="radio"
+        name="gender"
+        id="na"
+      ><br>
+      <label for="name">*Name</label>
+      <input
+        type="text"
+        name="name"
+        id="name"
+        placeholder="Name"
+        required
+      ><br>
+      <label for="surname">*Surname</label>
+      <input
+        type="text"
+        name="surname"
+        id="surname"
+        placeholder="Surname"
+        required
+      ><br>
+      <label for="email">*Email</label>
+      <input
+        type="email"
+        name="email"
+        id="email"
+        placeholder="Email"
+        required
+      ><br>
+      <label for="phone">*Phone</label>
+      <input
+        type="tel"
+        name="phone"
+        id="phone"
+        placeholder="Phone"
+        required
+      >
+    </fieldset>
+    <fieldset>
+      <legend>Address</legend>
+      <label for="address-name">*Name</label>
+      <input
+        type="text"
+        name="address-name"
+        id="address-name"
+        placeholder="Name"
+        required
+      ><br>
+      <label for="address-surname">*Purname</label>
+      <input
+        type="text"
+        name="address-surname"
+        id="address-surname"
+        placeholder="Surname"
+        required
+      ><br>
+      <label for="address-phone">*Phone</label>
+      <input
+        type="tel"
+        name="address-phone"
+        id="address-phone"
+        placeholder="Phone"
+        required
+      ><br>
+      <label for="address1">*Address Line 1</label>
+      <input
+        type="text"
+        name="address1"
+        id="address1"
+        placeholder="Address Line 1"
+        required
+      ><br>
+      <label for="address2">*Address Line 2</label>
+      <input
+        type="text"
+        name="address2"
+        id="address2"
+        placeholder="Address Line 2"
+        required
+      ><br>
+      <label for="city">*City</label>
+      <input
+        type="text"
+        name="city"
+        id="city"
+        placeholder="City"
+        required
+      ><br>
+      <label for="state">*State</label>
+      <select
+        name="state"
+        id="state"
+        required
+      >State
+        <option value="">--State--</option>
+      </select><br>
+      <label for="postcode">*Postcode</label>
+      <input
+        type="text"
+        name="postcode"
+        id="postcode"
+        placeholder="Postcode"
+        required
+      >
+    </fieldset>
+    <fieldset>
+      <legend>Card Information</legend>
+      <label for="card-number">*Card number</label>
+      <input
+        type="text"
+        name="card-number"
+        id="card-number"
+        placeholder="Card Number"
+        required
+      ><br>
+      <label for="card-name">*Name on card</label>
+      <input
+        type="text"
+        name="card-name"
+        id="card-name"
+        placeholder="Name on card"
+        required
+      ><br>
+      <label for="card-expiry-month">*Expiry Month</label>
+      <select
+        name="card-expiry-month"
+        id="card-expiry-month"
+        required
+      >Expiry Month
+        <option value="January">January</option>
+        <option value="February">February</option>
+        <option value="March">March</option>
+        <option value="April">April</option>
+        <option value="May">May</option>
+        <option value="June">June</option>
+        <option value="July">July</option>
+        <option value="August">August</option>
+        <option value="September">September</option>
+        <option value="October">October</option>
+        <option value="November">November</option>
+        <option value="December">December</option>
+
+      </select>
+      <label for="card-expiry-year">*Expiry Year</label>
+      <select
+        name="card-expiry-year"
+        id="card-expiry-year"
+        required
+      >
+        card-expiry-years
+        <option value="2019">2019</option>
+      </select><br>
+      <label for="card-cvv">*CVV</label>
+      <input
+        type="text"
+        name="card-cvv"
+        id="card-cvv"
+        placeholder="CVV"
+        required
+      ><br>
+      <p><i>We do not store credit card information</i>!</p>
+
+    </fieldset>
+    <fieldset>
+      <legend>Form Controls</legend>
+      <input
+        type="checkbox"
+        name="terms"
+        id="terms"
+        required
+      ><label for="terms">*You are requierd to agree to the <a
+          href=""
+          title="terms and conditions"
+        >terms and conditions</a></label><br>
+      <input
+        type="checkbox"
+        name="subscribe"
+        id="subscribe"
+      ><label for="subscribe">Can we send you emails</label><br>
+      <input
+        type="checkbox"
+        name="gdpr-consent"
+        id="gdpr-consent"
+      ><label for="gdpr-consent">GDPR generic consent</label><br>
+      <button
+        type="submit"
+        name="submit"
+        id="submit"
+      >PLACE ORDER</button>
+      <button
+        type="reset"
+        name="reset"
+        id="reset"
+      >Reset</button>
+
+    </fieldset>
+
+
+
+
+  </form>
+
+
+
+
+
+
+
+  <p>
+    <a
+      href=""
+      title="home"
+    >Home</a>*
+    <a
+      href=""
+      title="place order"
+    ><b>Place Order</b></a>*
+    <a
+      href=""
+      title="customer service"
+    >Customer Service</a>*
+    <a
+      href=""
+      title="contact"
+    >Contact</a>
+
+  </p>
+
+
 
 
   <div
