--- a/Curs07/Ex01/index.html
+++ b/Curs07/Ex01/index.html
@@ -9,6 +9,7 @@
   >
   <title>CSS</title>
 
+
   <link
     href="css/style.css"
     rel="stylesheet"
@@ -21,6 +22,11 @@
 </head>
 
 <body>
+  <style class="css">
+    a {
+      color: red;
+    }
+  </style>
   <h1>The Internet</h1>
 
   <h2>Google</h2>
