--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -117,16 +117,39 @@
         <li>
           <a
             href="http://"
-            target="_blank"
-            rel="noopener noreferrer"
             title="new-arrivals"
-          >New Arrivals</a>
+          >NEW ARRIVALS</a>
         </li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+          <a
+            href=""
+            title="brands"
+          >BRANDS</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="mens's"
+          >MEN'S</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="women's"
+          >WOMEN'S</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="accessories"
+          >ACCESSORIES</a>
+        </li>
+        <li>
+          <a
+            href=""
+            title="lookbook"
+          >LOOKBOOK</a>
+        </li>
 
       </ul>
 
@@ -134,7 +157,332 @@
     <!-- header-bottom -->
 
   </header>
+  <main class="content">
+    <main class="product-tiles">
+      <article class="product-tile-image">
+        <div class="product-tile-image-container">
+          <a
+            href=""
+            class="product-tile-image"
+            title="Monochrome"
+          ><img
+              src="img.mono/Products/Recently Viewed Thumbnail 2.png"
+              alt="Monochrome"
+            ></a>
+          <a
+            href=""
+            class="product-tile-badge"
+            title="badge"
+          ><i class="far fa-heart"></i></a>
 
+        </div>
+        <!-- /.product tile image container -->
+        <footer class="product-tiles-details">
+          <p>
+            <a
+              href=""
+              title="monochrome"
+            >MONOCHROME</a>
+          </p>
+          <p>$425</p>
+        </footer>
+        <!-- /.product tiles details -->
+
+      </article>
+      <!-- /.product tile image -->
+      <article class="product-tile-image">
+        <div class="product-tile-image-container">
+          <a
+            href=""
+            class="product-tile-image"
+            title="Monochrome"
+          ><img
+              src="img.mono/Products/Recently Viewed Thumbnail 2(1).png"
+              alt="Monochrome"
+            ></a>
+          <a
+            href=""
+            class="product-tile-badge"
+            title="badge"
+          ><i class="far fa-heart"></i></a>
+
+        </div>
+        <!-- /.product tile image container -->
+        <footer class="product-tiles-details">
+          <p>
+            <a
+              href=""
+              title="monochrome"
+            >MONOCHROME</a>
+          </p>
+          <p>$425</p>
+        </footer>
+        <!-- /.product tiles details -->
+
+      </article>
+      <!-- /.product tile image -->
+      <article class="product-tile-image">
+        <div class="product-tile-image-container">
+          <a
+            href=""
+            class="product-tile-image"
+            title="Monochrome"
+          ><img
+              src="img.mono/Products/Recently Viewed Thumbnail 2(2).png"
+              alt="Monochrome"
+            ></a>
+          <a
+            href=""
+            class="product-tile-badge"
+            title="badge"
+          ><i class="far fa-heart"></i></a>
+
+        </div>
+        <!-- /.product tile image container -->
+        <footer class="product-tiles-details">
+          <p>
+            <a
+              href=""
+              title="monochrome"
+            >MONOCHROME</a>
+          </p>
+          <p>$425</p>
+        </footer>
+        <!-- /.product tiles details -->
+
+      </article>
+      <!-- /.product tile image -->
+      <article class="product-tile-image">
+        <div class="product-tile-image-container">
+          <a
+            href=""
+            class="product-tile-image"
+            title="Monochrome"
+          ><img
+              src="img.mono/Products/Recently Viewed Thumbnail 2(4).png"
+              alt="Monochrome"
+            ></a>
+          <a
+            href=""
+            class="product-tile-badge"
+            title="badge"
+          ><i class="far fa-heart"></i></a>
+
+        </div>
+        <!-- /.product tile image container -->
+        <footer class="product-tiles-details">
+          <p>
+            <a
+              href=""
+              title="monochrome"
+            >MONOCHROME</a>
+          </p>
+          <p>$425</p>
+        </footer>
+        <!-- /.product tiles details -->
+
+      </article>
+      <!-- /.product tile image -->
+      <h1>Most Loved</h1>
+      <article class="product-tile-image">
+        <div class="product-tile-image-container">
+          <a
+            href=""
+            class="product-tile-image"
+            title="Monochrome"
+          ><img
+              src="img.mono/Products/Recently Viewed Thumbnail 2(4).png"
+              alt="Monochrome"
+            ></a>
+          <a
+            href=""
+            class="product-tile-badge"
+            title="badge"
+          ><i class="far fa-heart"></i></a>
+
+        </div>
+        <!-- /.product tile image container -->
+        <footer class="product-tiles-details">
+          <p>
+            <a
+              href=""
+              title="monochrome"
+            >MONOCHROME</a>
+          </p>
+          <p>$425</p>
+        </footer>
+        <!-- /.product tiles details -->
+
+      </article>
+      <!-- /.product tile image -->
+      <article class="product-tile-image">
+        <div class="product-tile-image-container">
+          <a
+            href=""
+            class="product-tile-image"
+            title="Monochrome"
+          ><img
+              src="img.mono/Products/Recently Viewed Thumbnail 2.png"
+              alt="Monochrome"
+            ></a>
+          <a
+            href=""
+            class="product-tile-badge"
+            title="badge"
+          ><i class="far fa-heart"></i></a>
+
+        </div>
+        <!-- /.product tile image container -->
+        <footer class="product-tiles-details">
+          <p>
+            <a
+              href=""
+              title="monochrome"
+            >MONOCHROME</a>
+          </p>
+          <p>$425</p>
+        </footer>
+        <!-- /.product tiles details -->
+
+      </article>
+      <!-- /.product tile image -->
+      <article class="product-tile-image">
+        <div class="product-tile-image-container">
+          <a
+            href=""
+            class="product-tile-image"
+            title="Monochrome"
+          ><img
+              src="img.mono/Products/Recently Viewed Thumbnail 2(2).png"
+              alt="Monochrome"
+            ></a>
+          <a
+            href=""
+            class="product-tile-badge"
+            title="badge"
+          ><i class="far fa-heart"></i></a>
+
+        </div>
+        <!-- /.product tile image container -->
+        <footer class="product-tiles-details">
+          <p>
+            <a
+              href=""
+              title="monochrome"
+            >MONOCHROME</a>
+          </p>
+          <p>$425</p>
+        </footer>
+        <!-- /.product tiles details -->
+
+      </article>
+      <!-- /.product tile image -->
+      <article class="product-tile-image">
+        <div class="product-tile-image-container">
+          <a
+            href=""
+            class="product-tile-image"
+            title="Monochrome"
+          ><img
+              src="img.mono/Products/Recently Viewed Thumbnail 2(3).png"
+              alt="Monochrome"
+            ></a>
+          <a
+            href=""
+            class="product-tile-badge"
+            title="badge"
+          ><i class="far fa-heart"></i></a>
+
+        </div>
+        <!-- /.product tile image container -->
+        <footer class="product-tiles-details">
+          <p>
+            <a
+              href=""
+              title="monochrome"
+            >MONOCHROME</a>
+          </p>
+          <p>$425</p>
+        </footer>
+        <!-- /.product tiles details -->
+
+      </article>
+      <!-- /.product tile image -->
+      <section class="product-ads">
+        <h1>Watches for entrepreneurs</h1>
+        <img
+          src="img.mono/oliver-pecker-HONJP8DyiSM-unsplash.png"
+          alt=""
+        >
+        <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I
+          will give you a complete account of the system, and expound the actual teachings of the great explorer of the
+          truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because.
+        </p>
+      </section>
+      <!-- /.product ads -->
+    </main>
+    <!-- /.product.tiles -->
+  </main>
+  <!-- /.content -->
+  <footer class="footer">
+    <section class="footer-contact">
+      <a
+        href="tel:+44(0)1023456789"
+        title="call-us"
+      >call us <br> +44(0)1023456789 </a> <br>
+      <a
+        href="mailto:"
+        title="email-customer-care"
+      >email customer care</a> <br>
+      <a
+        href=""
+        title="see-mobile-version"
+      >see mobile version</a>
+    </section>
+    <!-- /.footer-contact -->
+    <section class="footer-suport">
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="">style & fit advice</a></li>
+          <li><a href="">faqs</a></li>
+          <li><a href="">delivery</a></li>
+          <li><a href="">exchange & returns</a></li>
+        </ul>
+        <ul>
+          <li><a href="">avout us</a></li>
+          <li><a href="">careers</a></li>
+          <li><a href=""></a>affiliates</li>
+          <li><a href=""></a>advertising</li>
+
+        </ul>
+
+      </nav>
+      <!-- /.footer nav -->
+
+    </section>
+    <!-- /.footer suport -->
+    <nav class="footer-social">
+      <a href="">sign up for our newsletter </a>
+      <form>
+        <input
+          type="text"
+          name=""
+          id=""
+        ><br>
+        <button type="submit">SUBMIT</button>
+      </form>
+      <ul>
+        <li><i class="fab fa-youtube"></i></li>
+        <li><i class="fab fa-twitter"></i></li>
+        <li><i class="fab fa-facebook-f"></i></li>
+        <li><i class="fab fa-instagram"></i></li>
+
+      </ul>
+
+    </nav>
+    <!--/.footer social  -->
+  </footer>
+  <!-- /.footer -->
 
 
 
