--- a/Curs07/Ex01/index.html
+++ b/Curs07/Ex01/index.html
@@ -19,14 +19,16 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+
+  <style>
+    a {
+      color: green;
+    }
+  </style>
 </head>
 
 <body>
-  <style class="css">
-    a {
-      color: red;
-    }
-  </style>
+
   <h1>The Internet</h1>
 
   <h2>Google</h2>
@@ -86,7 +88,10 @@
   <p>
     <a href="https://en.wikipedia.org/wiki/Bing_(search_engine)">https://en.wikipedia.org/wiki/Bing_(search_engine)</a>
     <br>
-    <a href="http://www.bing.com">https://www.bing.com</a>
+    <a
+      href="http://www.bing.com"
+      style="color: yellow;"
+    >https://www.bing.com</a>
   </p>
 
 
