--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -416,12 +416,14 @@
         >
         <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I
           will give you a complete account of the system, and expound the actual teachings of the great explorer of the
-          truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because.
+          truth, the master-builder of human happiness. <br>
+          No one rejects, dislikes, or avoids pleasure itself, because.
         </p>
 
         <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I
           will give you a complete account of the system, and expound the actual teachings of the great explorer of the
-          truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because.
+          truth, the master-builder of human happiness. <br>
+          No one rejects, dislikes, or avoids pleasure itself, because.
         </p>
       </section>
       <!-- /.product ads -->
