--- a/Curs08/Ex04/index.html
+++ b/Curs08/Ex04/index.html
@@ -199,6 +199,21 @@
       title="Ozon"
     >Ozon</a>
   </nav>
+  <nav class="nav-top">
+    <a
+      href="#water"
+      title="Apa"
+    >Apa</a>
+    <a
+      href="#acid"
+      title="Acid"
+    >Acid Sulfuric</a>
+    <a
+      href="#ozone"
+      title="Ozon"
+    >Ozon</a>
+  </nav>
+
 
   <div
     class="container"
