--- a/Curs08/Ex05/index.html
+++ b/Curs08/Ex05/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <nav>
+  <nav class="nav-bottom">
     <a
       href="#pythagora"
       title="Teoria lui Pitagora"
@@ -38,8 +38,9 @@
     id="pythagora"
   >
     <p>
-      Teoria lui Pitagora este fundamentala in geometria euclidiana.<br>
-      Aceasta sustine ca suma patratelor laturilor unui triunghi este egala cu patratul ipotenuzei.<br>
+      Teoria lui <span class="legend"> Pitagora </span> este fundamentala in geometria euclidiana.<br>
+      Aceasta sustine ca suma <span class="sup span"> patratelor </span> laturilor unui <span class="sup span">
+        triunghi</span> este egala cu patratul <span class="sup span">ipotenuzei</span>.<br>
       Formula sa este: a2+b2=c2.
     </p>
   </div>
@@ -114,8 +115,9 @@
     id="circle"
   >
     <p>
-      Suprafata cercului se calculeaza stiind raza acestuia si valoarea lui π.<br>
-      Formula sa este πr2.
+      Suprafata <span class="legend"> cercului </span> se calculeaza stiind <span class="sup span">raza </span> acestuia
+      si valoarea lui π.<br>
+      Formula sa este <span class="sup span">πr2</span> .
     </p>
   </div>
 
@@ -183,14 +185,29 @@
     Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
     Lorem Ipsum.
   </p>
+  <nav class="nav-top">
+    <a
+      href="#pythagora"
+      title="Teoria lui Pitagora"
+    >Teoria lui Pitagora</a>
+    <a
+      href="#circle"
+      title="Suprafata Cercului"
+    >Suprafata Cercului</a>
+    <a
+      href="#squares"
+      title="Suma patratelor"
+    >Suma patratelor</a>
+  </nav>
 
   <div
     class="container"
     id="squares"
   >
     <p>
-      Suma a doua patrate se calculeaza folosind urmatoarea formula:<br>
-      A2+B2=(A+B)2 - 2AB
+      Suma a doua <span class="legend"> patrate </span> se calculeaza folosind urmatoarea <span class="sup span">
+        formula </span>:<br>
+      <span class="sup span">A2+B2=(A+B)2 - 2AB</span>
     </p>
   </div>
 
