--- a/Curs08/z-index/index.html
+++ b/Curs08/z-index/index.html
@@ -16,5 +16,11 @@
 </head>
 
 <body>
+  <div class="my-div"></div>
 
+  <div
+    class="pixeltab-host"
+    id="html01-08-06"
+  ></div>
+  <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
 </body>
